k8s/postapi/post-db-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: post-api-db
  template:
    metadata:
      labels:
        app: post-api-db
    spec:
      containers:
      - name: post-api
        image: bootcamp-starter-kit_posts-api
        imagePullPolicy: Never #IfNotPresent
        ports:
        - name: nodejs-port
          containerPort: 5000
