k8s/postapi/post-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: post-api
    labels:
        app: post-api
    namespace: hopper
spec:
    replicas: 1
    selector:
        matchLabels:
            app: post-api
    template:
        metadata:
            labels:
                app: post-api
        spec:
            containers:
                - name: post-api-service
                  image: bootcamp-starter-kit_posts-api:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 8000
