k8s/postapi/post-db-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-api-db-service
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: post-api-db
  type: NodePort
