k8s/postapi/post-db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    namespace: hopper
    labels:
        app: post-api-service
    name: post-api-service
spec:
    ports:
        - name: post-api
          port: 80
          targetPort: 8000
    selector:
        app: post-api
    type: NodePort
